--- a/xxl-job/docker-compose.yml
+++ b/xxl-job/docker-compose.yml
@@ -3,6 +3,7 @@ services:
   xxl-job:
     image: xuxueli/xxl-job-admin:2.3.0
     container_name: xxl-job
+    restart: always
     environment:
       PARAMS: "--spring.datasource.url=jdbc:mysql://192.168.32.2:3306/xxl_job?useUnicode=true&characterEncoding=UTF-8&autoReconnect=true&serverTimezone=Asia/Shanghai  --spring.datasource.username=root  --spring.datasource.password=root"
     ports:
