--- a/redis-cluster/docker-compose.yml
+++ b/redis-cluster/docker-compose.yml
@@ -10,9 +10,12 @@ services:
     ports: # 映射端口，对外提供服务
       - 6391:6391 # redis的服务端口
       - 16391:16391 # redis集群监控端口
+    networks:
+      redis:
+        ipv4_address: 172.22.2.7
     stdin_open: true # 标准输入打开
     tty: true # 后台运行不退出
-    network_mode: host # 使用host模式
+    #network_mode: host # 使用host模式
     privileged: true # 拥有容器内命令执行的权限
     volumes:
       - /usr/local/redis-cluster/config:/config #配置文件目录映射到宿主机
@@ -30,8 +33,11 @@ services:
     ports:
       - 6392:6392
       - 16392:16392
+    networks:
+      redis:
+        ipv4_address: 172.22.2.8
     stdin_open: true
-    network_mode: host
+    #network_mode: host
     tty: true
     privileged: true
     volumes:
@@ -50,8 +56,11 @@ services:
     ports:
       - 6393:6393
       - 16393:16393
+    networks:
+      redis:
+        ipv4_address: 172.22.2.9
     stdin_open: true
-    network_mode: host
+    #network_mode: host
     tty: true
     privileged: true
     volumes:
@@ -70,8 +79,11 @@ services:
     ports:
       - 6394:6394
       - 16394:16394
+    networks:
+      redis:
+        ipv4_address: 172.22.2.10
     stdin_open: true
-    network_mode: host
+    #network_mode: host
     tty: true
     privileged: true
     volumes:
@@ -90,8 +102,11 @@ services:
     ports:
       - 6395:6395
       - 16395:16395
+    networks:
+      redis:
+        ipv4_address: 172.22.2.11
     stdin_open: true
-    network_mode: host
+    #network_mode: host
     tty: true
     privileged: true
     volumes:
@@ -110,8 +125,11 @@ services:
     ports:
       - 6396:6396
       - 16396:16396
+    networks:
+      redis:
+        ipv4_address: 172.22.2.12
     stdin_open: true
-    network_mode: host
+    #network_mode: host
     tty: true
     privileged: true
     volumes:
@@ -120,3 +138,12 @@ services:
     entrypoint:
       - /bin/bash
       - redis.sh
+
+# 网桥redis -> 方便相互通讯
+networks:
+  redis:
+    ipam:
+      driver: default
+      config:
+        - subnet: "172.22.2.0/24"
+
