修改redis集群部署，新增zk创建网络指定子网网段

--- a/redis-cluster/config/nodes-6393.conf
+++ b/redis-cluster/config/nodes-6393.conf
@@ -964,9 +964,9 @@ cluster-node-timeout 15000
 #
 # Example:
 #
-# cluster-announce-ip 10.1.1.5
-# cluster-announce-port 6379
-# cluster-announce-bus-port 6380
+cluster-announce-ip 192.168.32.2
+cluster-announce-port 6393
+cluster-announce-bus-port 16393
 
 ################################## SLOW LOG ###################################
 
