--- a/redis-cluster/config/nodes-6391.conf
+++ b/redis-cluster/config/nodes-6391.conf
@@ -964,9 +964,9 @@ cluster-node-timeout 15000
 #
 # Example:
 #
-# cluster-announce-ip 10.1.1.5
-# cluster-announce-port 6379
-# cluster-announce-bus-port 6380
+cluster-announce-ip 192.168.32.2
+cluster-announce-port 6391
+cluster-announce-bus-port 16391
 
 ################################## SLOW LOG ###################################
 
